Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_04.md
+++ b/Instructions/20533C_LAB_AK_04.md
@@ -9,7 +9,7 @@
 
 2. When prompted, sign in using the Microsoft account that is either the Service Administrator or a Co-administrator of your subscription.
 
-3. On the **Hub** menu, click **New**. In the **New** blade, in the **Search the marketplace** text box, type **Availability Set**, and press **Enter**.
+3. In the **Hub** menu, click **New**. In the **New** blade, in the **Search the marketplace** text box, type **Availability Set**, and press **Enter**.
 
 4. On the **Everything** blade, select **Availability Set**. 
 
@@ -26,7 +26,6 @@
   - Location: **_The Azure region closest to the location of your lab computer_**.
 
   - Fault domains: **3**
-> **Note:** You can decrease the value to 2, but not increase it.
 
   - Update domains: **5**
 > **Note:** The number of update domains can vary between 5 and 20.
@@ -61,7 +60,7 @@
 
 13. Click **OK**. The **Choose a size** blade automatically appears.
 
-14. On the **Choose a size** blade, if needed, click **View all**, click **A1 Standard**, and then click **Select**. The **Settings** blade appears.
+14. On the **Choose a size** blade, if needed, click **View all**, click **D1_V2 Standard**, and then click **Select**. The **Settings** blade appears.
 
 15. On the **Settings** blade, specify the following settings:
 
@@ -143,7 +142,7 @@
 
 31. On the **ResDevWebAS** blade, note that the availability set contains the two newly deployed virtual machines (at this point, both of them will likely display the **Creating** status). Note that each VM has a unique fault domain and update domain. You might need to wait a few minutes and refresh the Azure portal page before the updated status is displayed.
 
-32. Leave the instance of Internet Explorer with the Azure portal open.
+32. Leave the Internet Explorer window with the Azure portal open.
 
 
 
@@ -250,7 +249,7 @@
 
 6. Review the content of the script. Note the variables that it uses, including the storage account and its key. The script first retrieves the storage account from the resource group, and then publishes the DSC configuration defined in the **Install.ps1** into it, placing it in the default DSC container named **windows-powershell-dsc**, stores the resulting module URL in a variable, and then sets the Azure Agent VM DSC extension on two virtual machines deployed in the previous lab by referencing that URL. The script generates a shared access signature token that provides read only access to the blob representing the DSC configuration archive. 
 
-7. Start the execution of the script. When prompted, sign in using the Microsoft account that is either the Service Administrator or Co-administrator of your subscription. Wait until the script completes.
+7. Start the execution of the script. When prompted, sign in using the Microsoft account that is either the Service Administrator or a Co-administrator of your subscription. Wait until the script completes.
 
 8. Switch to the Azure portal displayed in the Internet Explorer window.
 
@@ -358,7 +357,7 @@
 
 29. In the **Services** window, right-click the **World Wide Web Publishing Service** entry, and then select **Start** from the right-click menu.
 
-30. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default IIS webpage.
+30. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default IIS webpage. Note that you might need to wait about a minute after you start the **World Wide Web Publishing Service** service.
 
 > **Note:** Optionally you can repeat this sequence, but this time stopping the **World Wide Web Publishing Service** on ResDevWebVM1 and starting it on ResDevWebVM2. As long as the service is running on at least one of the two virtual machines, you should be able to access the webpage.
 
@@ -390,12 +389,12 @@
 
   - Size: **1023**
 
-  - Storage Container: Select the existing storage account and the **vhds** container
+  - Storage Container: Click **Browse**, click the existing storage account and the **vhds** container, and click **Select**
 
 
 6. Wait for the operation to complete.
 
-7. Back on the **ResDevWebVM1 - Disks** blade, ensure that the **HOST CACHING** column contains the **None** entry and then click **Save**.
+7. Back on the **ResDevWebVM1 - Disks** blade, ensure that the **HOST CACHING** column contains the **None** entry.
 
 8. Click **+ Add data disk**.
 
@@ -412,7 +411,7 @@
 
   - Size: **1023**
 
-  - Storage Container: Select the existing storage account and the **vhds** container
+  - Storage Container: Click **Browse**, click the existing storage account and the **vhds** container, and click **Select**
 
 10. Wait for the operation to complete.
 
