Azure portal interface updates

--- a/Instructions/20533C_LAB_04.md
+++ b/Instructions/20533C_LAB_04.md
@@ -59,7 +59,6 @@ The main tasks for this exercise are as follows:
   - Location: **_The Azure region closest to the location of your lab computer_**.
 
   - Fault domains: **3**
-> **Note:** You can decrease the value to 2, but not increase it.
 
   - Update domains: **5**
 > **Note:** The number of update domains can vary between 5 and 20.
@@ -84,7 +83,7 @@ The main tasks for this exercise are as follows:
 
   - Location: **_The same location you chose for the availability set_**.
 
-  - Size: **A1 Standard** (choose the **D1_v2 Standard** or similar if **A1 Standard** is not available)
+  - Size: **D1_v2 Standard**
 
   - Use managed disks: **No**
 
@@ -120,7 +119,7 @@ The main tasks for this exercise are as follows:
 
   - Location: **_The same location you chose for the availability set_**.
 
-  - Size: **A1 Standard** (choose the **D1_v2 Standard** or similar if **A1 Standard** is not available)
+  - Size: **D1_v2 Standard**
 
   - Use managed disks: **No**
 
@@ -302,7 +301,7 @@ The main tasks for this exercise are as follows:
 
 10. From the Remote Desktop session window, start the **World Wide Web Publishing Service** service on **ResDevWebVM1**.
 
-11. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default the default IIS webpage.
+11. Once the service is running, switch back to MIA-CL1 and refresh the InPrivate Browsing Internet Explorer window. Verify that you can again access the default the default IIS webpage. Note that you might need to wait about a minute after you start the **World Wide Web Publishing Service** service.
 
 > **Note:** Optionally you can repeat this sequence, but this time stopping the **World Wide Web Publishing Service** on ResDevWebVM1 and starting it on ResDevWebVM2. As long as the service is running on at least one of the two virtual machines, you should be able to access the webpage.
 
