Azure portal interface updates

--- a/Instructions/20533C_LAB_05.md
+++ b/Instructions/20533C_LAB_05.md
@@ -297,7 +297,7 @@ The main tasks for this exercise are as follows:
 3. In the Azure portal, disable the Traffic Manager endpoint representing the web app instance you identified in the previous step.
 
 4. Use the **nslookup** command again to resolve the DNS NAME for your Traffic Manager profile. The results should differ from those in step 2.
-> **Note:** If the output of the command has not changed, this might be related to DNS caching. Wait about 1 minute and re-run the **nslookup** command.
+> **Note:** You might have to wait in order for the endpoint state change to take effect. Wait about 1 minute and re-run the **nslookup** command.
 
 
 #### Task 5: Reset the Azure environment
