Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_05.md
+++ b/Instructions/20533C_LAB_AK_05.md
@@ -41,7 +41,7 @@
 
 2. On the App Services blade, click the web app that you created in the first task. 
 
-3. On the web app blade, in the **APP DEPLOYMENT** section, click **Deployment slots**.
+3. On the web app blade, in the **DEPLOYMENT** section, click **Deployment slots**.
 
 4. On the Deployment slots blade, click **Add Slot**.
 
@@ -88,7 +88,7 @@
 
 #### Task 3: Configure deployment credentials
   
-1. In the Azure portal, in the web app that you created in the first task, on the web app blade, in the **APP DEPLOYMENT** section click **Deployment credentials**.
+1. In the Azure portal, in the web app that you created in the first task, on the web app blade, in the **DEPLOYMENT** section click **Deployment credentials**.
 
 2. On the deployment credentials blade, in the **FTP/Deployment user name** text box, type a unique name.
 
@@ -112,7 +112,7 @@
 
 4. On the **File** menu, click **Open**, and then click **Project/Solution**.
 
-5. Browse to the folder D:\\LabFiles\\Lab05\\Starter\\AdatumWebsite, click **AdatumWebsite.sln**, and then click **Open**.
+5. Browse to the folder D:\\LabFiles\\Lab05\\Starter\\AdatumWebsite, click **AdatumWebsite.sln**, and then click **Open**. If prompted, in the **Security Warning for AdatumWebsite** dialog box, click **OK**.
 
 6. On the **Debug** menu, click **Start Debugging**. This will open a new Microsoft Edge window.
 
@@ -171,7 +171,7 @@
   
 1. In Internet Explorer, in the Azure portal, navigate to the blade of the web app you created in Exercise 1, Task 1.
 
-2. On the web app blade, in the **APP DEPLOYMENT** section, click **Deployment slots**.
+2. On the web app blade, in the **DEPLOYMENT** section, click **Deployment slots**.
 
 3. On the Deployment slots blade, click the staging slot **_yourwebapp_-staging** that was created in Exercise 1, Task 2.
 
@@ -181,7 +181,7 @@
 
 6. Switch to **Visual Studio**.
 
-7. On the **File** menu, click **Open**, and then click **Project/Solution**.
+7. On the **File** menu, click **Open**, and then click **Project/Solution**. If prompted, in the **Security Warning for AdatumWebsite** dialog box, click **OK**.
 
 8. Browse to the folder D:\\LabFiles\\Lab05\\Starter\\NewAdatumWebsite.
 
@@ -287,7 +287,7 @@ Note the name of your original web app and its location.
 
 6. At the Windows PowerShell prompt, type the following command (where the _'webappname2'_ is a unique name that you will assign to a new web app you will create in the _'SecondLocation'_ in the next step), and then press Enter:
   ```
-  Test-AzureRmDnsAvailability -DomainNameLabel 'webapp' -Location 'SecondLocation'
+  Test-AzureRmDnsAvailability -DomainNameLabel 'webapp' -Location $rg2.Location
   ```
 Verify that the command returns **True**. If not, keep re-running the same command but with different values of the **-DomainNameLabel** parameter.
 
@@ -321,7 +321,7 @@ Verify that the command returns **True**. If not, keep re-running the same comma
 
 19. In the **Import Publish Settings** dialog box, click **Browse**.
 
-20. In the **Downloads** folder, select the **_WebAppName_2.PublishSettings** file, and then click **Open**.
+20. In the **Downloads** folder, select the **_WebAppName_2.PublishSettings_** file, and then click **Open**.
 
 21. In the **Import Publish Settings** dialog box, click **OK**.
 
@@ -397,7 +397,7 @@ Verify that the command returns **True**. If not, keep re-running the same comma
 
 #### Task 4: Test Traffic Manager
   
-1. In Internet Explorer, in the Azure portal, on the traffic Manager profile blade, click *Overview** and then, click the link under the **DNS name** section.
+1. In Internet Explorer, in the Azure portal, on the traffic Manager profile blade, click **Overview** and then, click the link under the **DNS name** section.
 
 2. Internet Explorer displays the Adatum web app. 
 
@@ -430,7 +430,7 @@ where _dnsname_ is the DNS name of the Traffic Manager profile.
 where _dnsname_ is the DNS name that you used in step 4.
 
 11. Note that the record that the command returns is different from the one returned in step 4.
-> **Note:** If the record has not changed, this might be related to DNS caching. Wait about 1 minute and re-run the **nslookup** command.
+> **Note:** You might have to wait in order for the endpoint state change to take effect. Wait about 1 minute and re-run the **nslookup** command.
 
 
 #### Task 5: Reset the Azure environment
