Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_06.md
+++ b/Instructions/20533C_LAB_AK_06.md
@@ -45,7 +45,7 @@
 
 10. On the *Blob service** blade, click **+ Container** in the toolbar.
 
-11. On the **New container** blade, specify the following settings, and then click **Create**:
+11. In the **New container** section, specify the following settings, and then click **OK**:
 
   - Name: **asset-images**
 
@@ -97,7 +97,7 @@
 
 10. In the **Services** section of the blade, click the **Blobs** tile.
 
-11. On the *Blob service** blade, click the **asset-images** container.
+11. On the **Blob service** blade, click the **asset-images** container.
 
 12. On the **asset-images** blade, verify that there are six new blobs.
 
@@ -177,7 +177,7 @@
 
 10. On the **Connect** blade, select the code appearing in the **Connecting from Windows** section, right-click on it, and, in the right-click menu, click **Copy**.
 
-11. Click **Start**, right-click **Windows PowerShell** and, in the right-click menu, click **Run ISE as Administrator**. 
+11. Click **Start**, right-click **Windows PowerShell**, in the right-click menu, click **More** and click **Run as administrator**. 
 
 12. In the **Administrator: Windows PowerShell ISE** window, if the script pane is not visible, click **View** and then, in the **View** menu, click **Show Script Pane**.
 
@@ -220,20 +220,24 @@
 
   - Pin to dashboard: _Ensure that the check box is cleared_
 
-  Wait until the vault is provisioned. The Azure portal will automatically display its blade.
+  Wait until the vault is provisioned. 
 
 
 #### Task 2: Configure the vault for on-premises backup
   
-1. On the recovery services vault blade, click **+ Backup**.
+1. In the hub menu, click **More Services**. In the search text box, type **Recovery Services vaults** and, in the list of results, click **Recovery Services vaults**.
 
-2. On the **Backup goal** blade, specify the following settings and click **OK**:
+2. On the **Recovery Services vaults** blade, click **adatumvault06**.
+
+3. On the **adatumvault06** blade, click **+ Backup**.
+
+4. On the **Backup goal** blade, specify the following settings and click **OK**:
 
 - Where is your workload running?: **On-premises**
 
 - What do you want to back up?: **Files and folders**
 
-3. Click on **Click here to prepare your infrastructure for backup to Azure**. 
+5. Click on **Click here to prepare your infrastructure for backup to Azure**. 
 
 
 
@@ -243,7 +247,7 @@
 
 2. When prompted whether to run or save **MARSAgentInstaller.exe**, click **Run**.
 
-3. When prompted, click **Yes** to allow the program to make changes to the computer.
+3. If prompted, click **Yes** to allow the program to make changes to the computer.
 
 4. On the **Installation Settings** page of the **Microsoft Azure Recovery Services Agent Setup Wizard**, click **Next**.
 
@@ -284,7 +288,7 @@
 
 3. On the **Select Items to Backup** page, click **Add Items**.
 
-4. In the **Select Items** dialog box, expand **D**, expand **Labfiles**, expand **Lab06**, expand **Starter**, select the following folders, and then click **OK**:
+4. In the **Select Items** dialog box, expand **D:\\Labfiles\Lab06\Starter**, select the following folders, and then click **OK**:
 
   - asset-images
 
