Azure portal interface updates

--- a/Instructions/20533C_LAB_06.md
+++ b/Instructions/20533C_LAB_06.md
@@ -223,7 +223,7 @@ The main tasks for this exercise are as follows:
 
   - Subscription: _the name of your Azure subscription_
 
-  - Resource group: _create a new resource group named **20533C0603-LabRG**_
+  - Resource group: _create a new resource group named_ **20533C0603-LabRG**
 
   - Location: _the same Azure region that you chose when runnng **Setup-Azure** at the beginning of this module_
 
