--- a/Instructions/20533C_LAB_07.md
+++ b/Instructions/20533C_LAB_07.md
@@ -249,9 +249,9 @@ Connection Timeout=30;
 
 5. Save **Web.config**. Then on the Debug menu, click **Start Debugging**.
 
-6. When Internet Explorer opens, verify that the sales application shows invoice history data for the selected customer. The data is retrieved from the sales database you migrated to Microsoft Azure SQL Database.
+6. When Microsoft Edge opens, verify that the sales application shows invoice history data for the selected customer. The data is retrieved from the sales database you migrated to Microsoft Azure SQL Database.
 
-7. Close the Internet Explorer window that contains the sales application, ensure that the Visual Studio debugger is stopped, and then close Visual Studio, saving changes if prompted
+7. Close the Microsoft Edge window that contains the sales application, ensure that the Visual Studio debugger is stopped, and then close Visual Studio, saving changes if prompted
 
 
 > **Result**: After completing this exercise, you should have deployed the sales SQL Server database on the local SQL Server instance to your Azure SQL Database server, and configured the SalesApp web application to use a connection string pointing to the new Azure SQL Database.
@@ -289,21 +289,19 @@ The main tasks for this exercise are as follows:
   
 1. In the Azure portal, browse to the blade of the SQL server you created in this lab.
 
-2. On the SQL server blade, navigate to the **Deleted databases** blade. 
+2. From the SQL server blade, create a new SQL database using the backup of the operations database as its source.
 
-3. From the **Deleted databases** blade, initiate a restore of the **operations** database. Make sure to change the automatically assigned name of the restored database back to **operations**.
-
-4. Wait for the restore operation to complete.
+3. Wait for the restore operation to complete.
 
 4. In SQL Server Management Studio, in Object Explorer, refresh the list of databases to verify that the **operations** database has been restored.
 
-6. In SQL Server Management Studio, run the following query against the **operations** database:
+5. In SQL Server Management Studio, run the following query against the **operations** database:
 
   ```
   SELECT * FROM dbo.serverlist
   ```
 
-7. View the query results and verify that a list of three servers and their IP addresses is returned.
+6. View the query results and verify that a list of three servers and their IP addresses is returned.
 
 
 
