Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_07.md
+++ b/Instructions/20533C_LAB_AK_07.md
@@ -39,13 +39,11 @@
 
 10. Click **Pricing tier**. 
 
-11. On the **Choose your pricing** blade, click **Basic** and then click **Select**.
+11. On the **Configure performance** blade, click **Basic** and then click **Apply**.
 
-12. Back on the **SQL database** blade, leave the default **Collation** setting in place.
+12. Back on the **SQL database** blade, accept the default value of the **Collation** setting.
 
-13. Accept the default value of the **Collation** setting.
-
-14. Enable the **Pin to dashboard** checkbox and click **Create**. Then wait for the SQL Database to be created.
+13. Enable the **Pin to dashboard** checkbox and click **Create**. Then wait for the SQL Database to be created.
 
 
 
@@ -238,7 +236,7 @@ GO
   
 1. Start Visual Studio, click **File**, click **Open**, and then click **Project/Solution**. 
 
-2. In the **Open Project** dialog box, navigate to the D:\\Labfiles\\Lab07\\Starter folder, click **SalesApp.sln** and click **Open**.
+2. In the **Open Project** dialog box, navigate to the D:\\Labfiles\\Lab07\\Starter folder, click **SalesApp.sln** and click **Open**. If prompted, in the **Security Warning for SalesApp** dialog box, click **OK**.
 
 3. In Solution Explorer, click **Web.config**.
 
@@ -266,11 +264,11 @@ TrustServerCertificate=False;
 Connection Timeout=30;
   ```
 
-11. Save Web.config. Then on the **Debug** menu, click **Start Debugging**. This will open an Internet Explorer window showing the **Customer Invoice History** page.
+11. Save Web.config. Then on the **Debug** menu, click **Start Debugging**. This will open a Microsoft Edge window showing the **Customer Invoice History** page.
 
-12. When Internet Explorer opens, verify that the sales application shows invoice history data for the selected customer. The data is retrieved from the sales database you migrated to Microsoft Azure SQL Database.
+12. When Microsoft Edge opens, verify that the sales application shows invoice history data for the selected customer. The data is retrieved from the sales database you migrated to Microsoft Azure SQL Database.
 
-13. Close the Internet Explorer window that shows the **Customer Invoice History** page and then close Visual Studio without saving any changes.
+13. Close the Microsoft Edge window that shows the **Customer Invoice History** page and then close Visual Studio without saving any changes.
 
 
 > **Result**: After completing this exercise, you should have deployed the sales SQL Server database on the local SQL Server instance to your Azure SQL Database server, and configured the SalesApp web application to use a connection string pointing to the new Azure SQL Database.
@@ -288,7 +286,7 @@ Connection Timeout=30;
 
 4. On the **Restore** blade, verify that a restore point is available. If not, wait until that is the case.
 
-5. On the **operations** blade, click **Delete**.
+5. Scroll back to the **operations** blade and click **Delete**.
 
 6. When prompted to confirm, click **Yes**.
 
@@ -302,23 +300,29 @@ Connection Timeout=30;
 
 2. On the **SQL servers** blade, click the entry representing the SQL server you created in this lab.
 
-3. On the server blade, on the **Overview** page, in the **Operations** section, click the **Deleted databases** tile.
+3. On the server blade, on the **Overview** page, click **+New database**
 
-4. On the **Deleted databases** blade, click **operations**.
+4. On the **SQL database** blade, in the **Database name** box, type **operations**.
 
-5. On the **Restore** blade, change the entry in the **Database name** text box to **operations** and click **OK**. Wait for the operation to complete by monitoring the notification area (this can take several minutes).
+5. In the **Select source** drop-down list, click **Backup**.
 
-6. In SQL Server Management Studio, in Object Explorer, under your Azure SQL Database server, right-click the **Databases** folder and click **Refresh** to verify that the operations database has been restored.
+6. Click **Backup - Configure required settings**.
 
-7 In SQL Server Management Studio, click **New Query** and enter the following Transact-SQL code in the new query pane:
+7. On the **Backups** blade, click **operations**.
+
+8. Accept the remaining settings with their default values and click **OK**. Wait for the operation to complete by monitoring the notification area (this can take several minutes).
+
+9. In SQL Server Management Studio, in Object Explorer, under your Azure SQL Database server, right-click the **Databases** folder and click **Refresh** to verify that the operations database has been restored.
+
+10 In SQL Server Management Studio, click **New Query** and enter the following Transact-SQL code in the new query pane:
 
   ```
   SELECT * FROM dbo.serverlist
   ```
 
-8. On the toolbar, in the drop-down list of availabile databases, ensure that **operations** is selected and then click **Execute**.
+11. On the toolbar, in the drop-down list of availabile databases, ensure that **operations** is selected and then click **Execute**.
 
-9. View the query results and verify that a list of three servers and their IP addresses is returned.
+12. View the query results and verify that a list of three servers and their IP addresses is returned.
 
 
 
