Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_08.md
+++ b/Instructions/20533C_LAB_AK_08.md
@@ -41,11 +41,9 @@
 
 12. Click **Pricing tier**. 
 
-13. On the **Pricing tier** blade, click **Basic** and click **Select**.
+13. On the **Configure performance** blade, click **Basic** and click **Apply**.
 
-14. Leave the default value in the **Collation** text box and click **Create**.
-
-15. Leave the **Pin to dashboard** checkbox clear.
+14. Leave the default value in the **Collation** text box, leave the **Pin to dashboard** checkbox clear, and click **Create**.
 
 #### Task 2: Create an Azure Storage account for a PaaS cloud service
   
@@ -102,7 +100,7 @@
 
 14. On the storage account blace, click **Access keys**
 
-15. Click the **Click to copy** icon next to the **PRIMARY CONNECTION STRING** entry. If prompted, click **Allow access**.
+15. Click the **Click to copy** icon next to the **CONNECTION STRING** entry for the **Primary** key. If prompted, click **Allow access**.
 
 16. Switch to Microsoft Visual Studio.
 
@@ -191,28 +189,30 @@
 4. On the **Upload a package** blade, ensure that the storage account you created in the second task of this exercise appears in the **Storage account** section.
 
 5. In the **Deployment label** textbox, type **AdatumAdsProd**.
+
+6. Set the **Package/configuration location** option to **from local**.
  
-6. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
+7. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
 
-7. In the **Choose File to Upload** dialog box, browse to D:\LabFiles\Lab08\Starter\Production\Package.
+8. In the **Choose File to Upload** dialog box, browse to D:\LabFiles\Lab08\Starter\Production\Package.
 
-8. Click **AdatumAds.cspkg**, and then click **Open**.
+9. Click **AdatumAds.cspkg**, and then click **Open**.
 
-9. Wait until the package is fully uploaded, as indicated by the green horizontal line labeled **AdatumAds.cspkg**.
+10. Wait until the package is fully uploaded.
 
-10. Next to the **Configuration (.cscfg)** box, click the folder icon.
+11. Next to the **Configuration (.cscfg)** box, click the folder icon.
 
-11. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
+12. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
-12. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
+13. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
-13. Wait until the configuration file is fully uploaded, as indicated by the green horizontal line labeled **ServiceConfiguration.Cloud.cscfg**.
+14. Wait until the configuration file is fully uploaded.
 
-14. Ensure that **Environment** switch is set to **Production** and that the **Start deployment** checkbox is enabled.
+15. Ensure that **Environment** switch is set to **Production** and that the **Start deployment** checkbox is enabled.
 
-15. Click **OK**.
+16. Click **OK**.
 
-16. Back on the **Cloud service (classic)** blade, leave the **Certificates** section and the **Pin to dashboard** checkbox with their default values and click **Create**.
+17. Back on the **Cloud service (classic)** blade, leave the **Certificates** section and the **Pin to dashboard** checkbox with their default values and click **Create**.
 
 > **Note:** Wait for the deployment to complete. This might take a few minutes. 
 
@@ -238,25 +238,27 @@
 
 5. In the **Deployment label** text box, type **AdatumAdsStage**.
 
-6. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
+6. Set the **Package/configuration location** option to **from local**.
 
-7. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Staging\\Package.
+7. Next to the **Package (.cspkg, .zip)** text box, click the folder icon.
 
-8. Click **AdatumAds.cspkg**, and then click **Open**.
+8. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Staging\\Package.
 
-9. Wait until the package is fully uploaded, as indicated by the green horizontal line labeled **AdatumAds.cspkg**.
+9. Click **AdatumAds.cspkg**, and then click **Open**.
 
-10. Next to the **Configuration (.cscfg)** box, click the folder icon.
+10. Wait until the package is fully uploaded.
 
-11. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
+11. Next to the **Configuration (.cscfg)** box, click the folder icon.
 
-12. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
+12. In the **Choose File to Upload** dialog box, browse to D:\\LabFiles\\Lab08\\Starter\\Production\\Package.
 
-13. Wait until the configuration file is fully uploaded, as indicated by the green horizontal line labeled **ServiceConfiguration.Cloud.cscfg**.
+13. Click **ServiceConfiguration.Cloud.cscfg**, and then click **Open**.
 
-14. Ensure that the **Start deployment** checkbox is enabled.
+14. Wait until the configuration file is fully uploaded.
 
-15. Click **OK**.
+15. Ensure that the **Start deployment** checkbox is enabled.
+
+16. Click **OK**.
 
 > **Note:** Wait for the deployment to complete. This might take a few minutes. You can monitor the progress in the **Roles and instances** section of the staging blade.
 
@@ -311,7 +313,7 @@
 
 6. Switch back to the Azure portal. In the cloud service blade, with the **Overview** page open, click **Staging slot** in the toolbar and then click **Production** in the drop-down menu.
 
-7. In the cloud service blade, click **Instances**.
+7. In the cloud service blade, click **Roles and Instances**.
 
 8. Click **AdatumAdsWebRole_IN_0**.
 
@@ -383,7 +385,7 @@
 
 2. On the **Monitor** blade, click **Alerts**
 
-3. In the list of alerts, note the **Network In Alert** entry and identify the value in the **LAST ACTIVE** column.
+3. In the list of alerts, note the **Network In Alert** entry and identify the value in the **LAST FIRED** column.
 
 3. Open a new Internet Explorer tab.
 
