Azure portal interface updates

--- a/Instructions/20533C_LAB_08.md
+++ b/Instructions/20533C_LAB_08.md
@@ -114,7 +114,7 @@ Password: **Pa55w.rd**
 
 2. In the file, set the **Instance count** attribute for the **AdatumAdsWebRole** and **AdatumAdsWorkerRole** roles to **2**.
 
-3. Switch to the Azure portal, navigate to the blade of the storage account you created earlier in this exercise and, from its **Access keys** blade, copy the value of the **PRIMARY CONNECTION STRING** entry.
+3. Switch to the Azure portal, navigate to the blade of the storage account you created earlier in this exercise and, from its **Access keys** blade, copy the value of the **CONNECTION STRING** entry of the **Primary** key.
 
 4. Back in the **ServiceConfiguration.Cloud.cscfg** file in the Visual Studio 2015 interface, replace all values of the **StorageConnectionString** attribute with the value you copied from the Azure portal.
 
@@ -300,7 +300,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 3: Monitor an active cloud service
   
-1. In the Azure portal, navigate to the **Monitor** blade, locate the **Network In Alert** entry, and identify the value in the **LAST ACTIVE** column.
+1. In the Azure portal, navigate to the **Monitor** blade, locate the **Network In Alert** entry, and identify the value in the **LAST FIRED** column.
 
 2. Open another Internet Explorer tab, browse to **www.hotmail.com**, and sign in with the username and password of the Microsoft Account that is the Service Administrator of your Azure subscription. 
 
