Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -25,7 +25,7 @@
 
 #### Task 2: Activate Azure AD Premium trial
   
-1. Start Internet Explorer and browse to the Azure classic portal at **https://manage.windowsazure.com. When prompted, sign in using the Microsoft account that is the Service Administrator of your subscription.
+1. Start Internet Explorer and browse to the Azure classic portal at **https://manage.windowsazure.com**. When prompted, sign in using the Microsoft account that is the Service Administrator of your subscription.
 
 2. In the navigation panel on the left, click **ACTIVE DIRECTORY**.
 
@@ -45,7 +45,7 @@
   
 1. On the **active directory** page, click **Adatum**.
 
-2. On the **Adatum** page, click **USERS**.
+2. On the **adatum** page, click **USERS**.
 
 3. Click the **ADD USER** button at the bottom of the page.
 
@@ -131,7 +131,7 @@
 
 #### Task 4: Manage groups by using the Azure classic portal
 
-1. In the Azure classic portal, from the **karen gruber** page, click the large left-pointing arrow to return to the **adatum** Azure AD page.
+1. In the Azure classic portal, navigate to the **adatum** Azure AD page.
 
 2. On the **adatum** page, click **LICENSES**.
 
@@ -370,11 +370,11 @@
 
 #### Task 2: Configure SSO on a client computer
   
-1. From Internet Explorer, browse to **https://myapps.microsoft.com
+1. From Internet Explorer, browse to **https://myapps.microsoft.com**
 
 2. On the **Microsoft Azure** page, click **Use another account**.
 
-3. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account and the corresponding password. 
+3. When prompted to sign in, specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account and **Pa55w.rd** as the corresponding password. 
 
 4. On the applications page, click the ellipsis next to **Skype**. Note the option to update the credentials. 
 
