Azure portal interface updates

--- a/Instructions/20533C_LAB_09.md
+++ b/Instructions/20533C_LAB_09.md
@@ -295,7 +295,7 @@ The main tasks for this exercise are as follows:
 
 #### Task 2: Test SSO
   
-1. Open an Internet Explorer window and browse to https://myapps.microsoft.com. When prompted, sign in by using specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account and the corresponding password. 
+1. Open an Internet Explorer window and browse to https://myapps.microsoft.com. When prompted, sign in by using specify the full user name (including the @_domain name_.onmicrosoft.com suffix) of the Mario Ledford's account and the corresponding password **Pa55w.ord**. 
 
 2. On the applications page, click the ellipsis next to **Skype**. Note the option to update the credentials. 
 
