Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_10.md
+++ b/Instructions/20533C_LAB_AK_10.md
@@ -20,7 +20,7 @@
 
 6. When prompted, sign in by using the Microsoft account that is the Service Administrator or a Co-Admininstrator of your Azure subscription.
 
-7. Click the user name in the upper right corner of the Azure portal and, in the DIRECTORY section of the drop down menu, select the entry containing your Microsoft Account user name followed by (Default Directory).
+7. Click the user name in the upper right corner of the Azure portal and ensure that, in the DIRECTORY section of the drop down menu, the entry containing your Microsoft Account user name followed by (Default Directory) is selected.
 
 8. In the hub menu of the Azure portal, click **More services** and then, in the list of services, click **Virtual machines**.
 
@@ -79,7 +79,7 @@
 
 10. Wait until the new directory is provisioned.
 
-11. Click the user name in the upper right corner of the Azure portal and, in the DIRECTORY section of the drop down menu, select the entry labeled AdatumSync.
+11. Refresh the Internet Explorer window. Next, click the user name in the upper right corner of the Azure portal and, in the DIRECTORY section of the drop down menu, select the entry labeled AdatumSync.
 
 12. Ensure that **ADATUMSYNC** appears in the upper right corner of the portal underneath your Microsoft account name and, in the hub menu, click **More services**
 
