--- a/Instructions/20533C_LAB_10.md
+++ b/Instructions/20533C_LAB_10.md
@@ -78,7 +78,7 @@ The main tasks for this exercise are as follows:
   - Country or region: **United States**
 
 
-4. In the Azure portal, switch to the newly created Azure AD tenant and create a new Global Admin user with the following settings:
+4. Refresh the Internet Explorer window, in the Azure portal, switch to the newly created Azure AD tenant, and create a new Global Admin user with the following settings:
 
 
   - Name: **SyncAdmin**
