Azure portal interface updates

--- a/Instructions/20533C_LAB_AK_11.md
+++ b/Instructions/20533C_LAB_AK_11.md
@@ -24,7 +24,7 @@
 
   - Subscription: _your current subscription_
 
-  - Resource group: _ensure that the **Create new** option is selected and type **20533C1102-LabRG** in the text box_
+  - Resource group: _ensure that the **Create new** option is selected and type _**20533C1102-LabRG**_ in the text box_
 
   - Location: _an Azure region that you chose when running **Setup-Azure** or, if not available, another region close to it_
 
@@ -169,7 +169,7 @@
   Reset-Azure
   ```
 
-4. When prompted (twice), sign in by using the Microsoft account associated with your Azure subscription.
+4. When prompted (twice), sign in by using the Microsoft account that is the Service Administrator or a Co-Administrator of your Azure subscription.
 
 5. If you have multiple Azure subscriptions, select the one you want to target with the script.
 
