--- a/Instructions/20533C_LAB_11.md
+++ b/Instructions/20533C_LAB_11.md
@@ -161,7 +161,7 @@ The main tasks for this exercise are as follows:
   Reset-Azure
   ```
 
-3. When prompted (twice), sign in by using the Microsoft account associated with your Azure subscription. 
+3. When prompted (twice), sign in by using the Microsoft account that is the Service Administrator or a Co-Administrator of your Azure subscription. 
 
 4. If you have multiple Azure subscriptions, select the one you want to target with the script.
 
