Updating to reflect changes to Azure portal

--- a/Instructions/20533C_LAB_AK_09.md
+++ b/Instructions/20533C_LAB_AK_09.md
@@ -20,25 +20,24 @@
 
   - Country or region: **United States**
 
-5. Close Internet Explorer.
+5. Leave Internet Explorer open and wait until the Azure Active Directory tentant is provisioned.
 
 
 #### Task 2: Activate Azure AD Premium trial
   
-1. Start Internet Explorer and browse to the Azure classic portal at **https://manage.windowsazure.com**. When prompted, sign in using the Microsoft account that is the Service Administrator of your subscription.
+1. In Internet Explorer, click your name in the upper right corner of the Azure portal and, in the drop-down menu, click the name of the Azure Active Directory tenant you created in the previous task.
 
-2. In the navigation panel on the left, click **ACTIVE DIRECTORY**.
+2. in the hub menu on the left hand side, click the **Azure Active Directory** icon. You might need to expand the hub menu to see the labels of the icons. This should automatically display the **adatum** Azure Active Directory tenant blade.
 
-3. Click the **Adatum** directory.
+3. Click **Quick Start**.
 
-4. Click **LICENSES**.
+4. Click **Get a free trial for Azure AD Premium**.
 
-5. Click **TRY AZURE ACTIVE DIRECTORY PREMIUM NOW**.
+5. On the **activate** blade, in the **AZURE AD PREMIUM** section, click **Free trial**.
 
-6. In the Activate Azure AD Premium trial pop-up window, click the check mark to confirm your choice.
+6. On the **Activate Azure AD Premium trial**, click **Activate**.
 
-7. Keep clicking the **Click here to refresh** link until the **Azure Active Directory Premium P2** appears in the **LICENSE PLANS** column. 
-
+7. Click the notification area to verify that the Azure AD Premium trial was successfully activated.
 
 
 #### Task 3: Manage users by using the Azure classic portal
